Transform layout and elements to appuniversum components

--- a/app/templates/components/select-bestuurseenheid.hbs
+++ b/app/templates/components/select-bestuurseenheid.hbs
@@ -1,7 +1,11 @@
 <div class={{this.args.class}}>
+  <AuHelpText class="au-u-margin-bottom-small">
+    <strong>Zoek naar een gemeente, disctrict of provincie</strong> (Berchem, Hasselt, Gent, ...),
+    <br>
+    <strong>of besuurseenheid</strong> zoals een gemeentebestuur, autonoom gemeentebedrijf, OCMW-vereniging, intergemeentelijk samenwerkingsverband (IGS), provinciebestuur of autonoom provinciebedrijf (APB)
+    </AuHelpText>
   <PowerSelect
     @searchEnabled={{true}}
-    @placeholder="Berchem, Hasselt, Gent, ..."
     @search={{perform search}}
     @searchField="naam"
     @searchPlaceholder="Typ om te zoeken..."
