--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -1,31 +1,27 @@
-<div class="u-padding--rl--small u-background--gray-lighter">
-  <div class="u-padding--top--tiny">
-    <div class="grid">
-      <div class="col--6-12">
-        <LinkTo @route="index" @query={{hash bestuurseenheidId=bestuurseenheid.id}} class="link--icon">
-          <small><i class="vi-arrow vi-u-180deg vi"></i>Terug naar zoeken</small>
-        </LinkTo>
+<div class="au-o-region-small au-o-region--alt">
+  <div class="au-o-box">
+    <AuLink @linkRoute="index" class="au-u-margin-bottom">
+      <AuIcon @icon="nav-left" @alignment="left" />
+      Terug naar zoeken
+    </AuLink>
+
+    <div class="au-o-grid">
+      <div class="au-o-grid__item au-u-1-1 au-u-1-2@small au-u-2-3@medium">
+        <AuHeading @level="1" @skin="2">
+          Leidinggevenden van
+          <WithRdfaContext @model={{bestuurseenheid}} @tagName="span" as |bestuurseenheid|>
+            <bestuurseenheid.get @prop="naam" as |attributes value|>
+              <span {{rdfa attributes}}>{{value}}</span>
+            </bestuurseenheid.get>
+          </WithRdfaContext>
+        </AuHeading>
       </div>
     </div>
   </div>
-
-  <div class="u-padding--tb" id="main">
-    <h1 class="h2 text-light u-spacer--bottom--tiny">
-      Leidinggevenden van
-
-      <WithRdfaContext @model={{bestuurseenheid}} @tagName="span" as |bestuurseenheid|>
-        <bestuurseenheid.get @prop="naam" as |attributes value|>
-          <span {{rdfa attributes}}>{{value}}</span>
-        </bestuurseenheid.get>
-      </WithRdfaContext>
-    </h1>
-  </div>
 </div>
-
-<div class="u-padding--rl--small u-spacer--tb">
-  <div class="container-flex--scroll">
+<div class="au-o-body-container au-o-box">
+  <div class="au-u-margin-top-small">
     <FunctionarisTable
-      class="container-flex--contain"
       @content={{filteredModel}}
       @page={{page}}
       @size={{size}}
