--- a/app/templates/components/number-pagination.hbs
+++ b/app/templates/components/number-pagination.hbs
@@ -1,3 +1,4 @@
+{{!-- TODO: Check out with RPIO --}}
 <div class="pager">
   <ul class="pager__list">
     <li class="pager__element u-hidden-mobile">
