--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,7 @@
 <AuMainHeader @brandLink="https://leidinggevenden.lokaalbestuur.vlaanderen.be/" @homeRoute="index" @appTitle="Leidinggevendendatabank" @contactRoute="contact">
 </AuMainHeader>
 
-<div class="au-c-main-container" itemprop="mainContentOfPage" id="main">
+<div class="au-c-main-container" id="main">
   <div class="au-c-main-container__content au-c-main-container__content--scroll">
     <main id="content">
       <WithRdfaPrefixesAndVocab>
