Add tabindex for more consistent tab starting point

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
   <HeadLayout />
 {{/unless}}
 {{page-title "Leidinggevenden databank"}}
-<AuMainHeader @brandLink="https://leidinggevenden.lokaalbestuur.vlaanderen.be/" @homeRoute="index" @appTitle="Leidinggevendendatabank" @contactRoute="contact">
+<AuMainHeader @brandLink="https://leidinggevenden.lokaalbestuur.vlaanderen.be/" @homeRoute="index" @appTitle="Leidinggevendendatabank" @contactRoute="contact" tabindex="0">
 </AuMainHeader>
 
 <div class="au-c-main-container" id="main">
