Upgrade thSortable to newer AuDataTableThSortable

--- a/app/templates/components/functionaris-table.hbs
+++ b/app/templates/components/functionaris-table.hbs
@@ -7,12 +7,12 @@
               @isLoading={{isLoadingModel}} as |t|>
   <t.content as |c|>
     <c.header>
-      <ThSortable @label="Functie" @field="bekleedt.rol.label" @currentSorting={{sort}} @class="data-table__header-title" />
-      <ThSortable @label="Voornaam" @field="is-bestuurlijke-alias-van.gebruikte-voornaam" @currentSorting={{sort}} @class="data-table__header-title" />
-      <ThSortable @label="Familienaam" @field="is-bestuurlijke-alias-van.achternaam" @currentSorting={{sort}} @class="data-table__header-title" />
-      <ThSortable @label="Status" @field="status.label" @currentSorting={{sort}} @class="data-table__header-title" />
+      <AuDataTableThSortable @label="Functie" @field="bekleedt.rol.label" @currentSorting={{sort}} @class="data-table__header-title" />
+      <AuDataTableThSortable @label="Voornaam" @field="is-bestuurlijke-alias-van.gebruikte-voornaam" @currentSorting={{sort}} @class="data-table__header-title" />
+      <AuDataTableThSortable @label="Familienaam" @field="is-bestuurlijke-alias-van.achternaam" @currentSorting={{sort}} @class="data-table__header-title" />
+      <AuDataTableThSortable @label="Status" @field="status.label" @currentSorting={{sort}} @class="data-table__header-title" />
       <th>Contactgegevens</th>
-      <ThSortable @label="Adres" @field="bekleedt.contactinfo.adres" @currentSorting={{sort}} @class="data-table__header-title" />
+      <AuDataTableThSortable @label="Adres" @field="bekleedt.contactinfo.adres" @currentSorting={{sort}} @class="data-table__header-title" />
     </c.header>
     <c.body as |row|>
       <td>
