--- a/app/templates/bestuurseenheid/functionarissen.hbs
+++ b/app/templates/bestuurseenheid/functionarissen.hbs
@@ -22,7 +22,7 @@
 <div class="au-o-body-container au-o-box">
   <div class="au-u-margin-top-small">
     <FunctionarisTable
-      @content={{model}}
+      @content={{filteredModel}}
       @page={{page}}
       @size={{size}}
       @sort={{sort}}
