Allow users to load more search results
The search results are paginated by the server. Before this change not all options would be displayed and there was no option to load more. Some users couldn't find the option they needed and making the search term more specific isn't always possible.

This adds an extra button which users can click to manually load more search results.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -86,6 +86,9 @@
 @import 'ember-power-select';
 @import "ember-appuniversum/p-ember-power-select";
 
+// Project styles
+@import 'project/select-infinite-options';
+
 // UTILITIES
 @import "appuniversum/u-align-text";
 @import "appuniversum/u-headings";
